--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         </activity>
         <activity
             android:name=".WelcomeActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
+        <activity android:name=".TripActivity"></activity>
     </application>
 
 </manifest>
