--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="travel_buddyapp.travelbuddyapp">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,8 +26,9 @@
         </activity>
         <activity
             android:name=".WelcomeActivity"
-            android:exported="true"></activity>
-        <activity android:name=".TripActivity"></activity>
+            android:exported="true" />
+        <activity android:name=".TripActivity" />
+        <activity android:name=".LoginAct"></activity>
     </application>
 
 </manifest>
