List trip destination UI
Login UI fixed.  Gradient color schemes.  Trip List still needs some rendering

--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -27,8 +27,13 @@
         <activity
             android:name=".WelcomeActivity"
             android:exported="true" />
-        <activity android:name=".TripActivity" />
-        <activity android:name=".LoginAct"></activity>
+
+        <activity android:name=".TripActivity"
+            android:exported="true"/>
+
+        <activity android:name=".LoginAct"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
