--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -27,13 +27,13 @@
         <activity
             android:name=".WelcomeActivity"
             android:exported="true" />
-
-        <activity android:name=".TripActivity"
-            android:exported="true"/>
-
-        <activity android:name=".LoginAct"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".TripActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LoginAct"
+            android:exported="true"></activity>
+        <activity android:name=".SignUpActivity"></activity>
     </application>
 
 </manifest>
