Pass Reset UI Design
Create Password reset UI

--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:name=".LoginAct"
             android:exported="true" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".Search_Activity"></activity>
+        <activity android:name=".Search_Activity" />
+        <activity android:name=".ResetPass_Activity"></activity>
     </application>
 
 </manifest>
