New TravelBook UI Design
Created new travelbook UI

--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:exported="true" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".Search_Activity" />
-        <activity android:name=".ResetPass_Activity"></activity>
+        <activity android:name=".ResetPass_Activity" />
+        <activity android:name=".NewTravelbook_Activity"></activity>
     </application>
 
 </manifest>
