--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -44,13 +44,11 @@
             android:exported="true" />
         <activity
             android:name=".NewTravelbook_Activity"
-            android:exported="true">
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".Travelbook_view_activity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
+        <activity android:name=".ForgotPasswordActivity"></activity>
     </application>
 
 </manifest>
