--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -44,11 +44,16 @@
             android:exported="true" />
         <activity
             android:name=".NewTravelbook_Activity"
-            android:exported="true"></activity>
+            android:exported="true">
+        </activity>
         <activity
             android:name=".Travelbook_view_activity"
-            android:exported="true"></activity>
-        <activity android:name=".ForgotPasswordActivity"></activity>
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
