--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -6,11 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-<<<<<<< Updated upstream
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATIONS" />
+    <!--Updated upstream-->
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-=======
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -19,7 +16,6 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
->>>>>>> Stashed changes
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
