--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!--Updated upstream-->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!-- Updated upstream -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -77,8 +77,10 @@
             android:label="@string/title_activity_search_maps" />
         <activity
             android:name=".Search_Destination_Activity"
-            android:label="@string/title_activity_search__destination_"
-            android:exported="true" ></activity>
+            android:exported="true"
+            android:label="@string/title_activity_search__destination_" />
+        <activity android:name=".Show_Destination_Activity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
