--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="true" />
+        <activity
+            android:name=".MapsActivity"
+            android:exported="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -79,11 +82,16 @@
             android:name=".Search_Destination_Activity"
             android:exported="true"
             android:label="@string/title_activity_search__destination_" />
-        <activity android:name=".Show_Destination_Activity"
-            android:exported="true"></activity>
-
-        <activity android:name=".ViewMap_Activity"
-            android:exported="true"></activity>
+        <activity
+            android:name=".Show_Destination_Activity"
+            android:exported="true" />
+        <activity
+            android:name=".ViewMap_Activity"
+            android:exported="true" />
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/title_activity_map"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
