--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -79,8 +79,10 @@
             android:name=".Search_Destination_Activity"
             android:exported="true"
             android:label="@string/title_activity_search__destination_" />
-        <activity android:name=".Show_Destination_Activity"
-            android:exported="true"></activity>
+        <activity
+            android:name=".Show_Destination_Activity"
+            android:exported="true" />
+        <activity android:name=".Gallery_Activity"></activity>
     </application>
 
 </manifest>
