--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -8,11 +8,9 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- Updated upstream -->
     <uses-permission android:name="android.permission.INTERNET" />
-
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -98,8 +96,8 @@
         <activity
             android:name=".MapActivity"
             android:label="@string/title_activity_map"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
->>>>>>> mobile_development
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".All_Routes_Activity"></activity>
     </application>
 
 </manifest>
