--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC7_wVVEM7dUHUEjYPTG4Cj2wLv_QkWJVo" />
+            android:value="AIzaSyB3Pl7DfTDNwv9YIimYWjKG1ckaZV7JyTQ" />
 
         <activity
             android:name=".SearchMapsActivity"
@@ -97,5 +97,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".All_Routes_Activity"></activity>
     </application>
+
+    {"installed":{"client_id":"23132307029-da4afjuvfgailtqilkle3ps2nq9s3uc4.apps.googleusercontent.com","project_id":"travelbuddy-1507814247466","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://accounts.google.com/o/oauth2/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","redirect_uris":["urn:ietf:wg:oauth:2.0:oob","http://localhost"]}}
 
 </manifest>
