--- a/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Mobile_App/MyApplication/app/src/main/AndroidManifest.xml
@@ -77,6 +77,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB3Pl7DfTDNwv9YIimYWjKG1ckaZV7JyTQ" />
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".SearchMapsActivity"
             android:label="@string/title_activity_search_maps" />
